feat/Book dto added to retrieve speciffic data, swagger config, sucurity, book controller,book service Data seeder,application properties modified